upgrade spring boot 3 (#8)
* upgrade spring boot 3

* organizando imports

* usando toList()

* removendo public dos testes

* consertando imports

* spring security

* minor

* atualizando Postman

* atualizando datas

* removendo referencias java.util.Date

* update spring boot 3.3.1