@@ -4,8 +4,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver;
 
-import javax.servlet.http.HttpServletRequest;
-import java.util.Arrays;
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -13,13 +12,9 @@ import java.util.Optional;
 @Component
 public class LocaleResolver extends AcceptHeaderLocaleResolver {
 
-    private static final Locale DEFAULT_LOCALE = new Locale("pt", "BR");
+    private static final Locale DEFAULT_LOCALE = Locale.of("pt", "BR");
 
-    private static final List<Locale> ACCEPTED_LOCALES = Arrays.asList(
-
-        DEFAULT_LOCALE,
-        new Locale("en")
-    );
+    private static final List<Locale> ACCEPTED_LOCALES = List.of(DEFAULT_LOCALE, Locale.of("en"));
 
     @Override
     public Locale resolveLocale(HttpServletRequest request) {
@@ -31,6 +26,4 @@ public class LocaleResolver extends AcceptHeaderLocaleResolver {
         Locale locale = Locale.lookup(list, ACCEPTED_LOCALES);
         return Optional.ofNullable(locale).orElse(DEFAULT_LOCALE);
     }
-
-
 }
