@@ -2,12 +2,12 @@ package app.car.cap09.config;
 
 import app.car.cap09.domain.User;
 import app.car.cap09.domain.UserRepository;
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import javax.annotation.PostConstruct;
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class LoadUserConfig {
@@ -23,7 +23,7 @@ public class LoadUserConfig {
     public void init() {
         User admin = new User();
         admin.setPassword(passwordEncoder.encode("password"));
-        admin.setRoles(Arrays.asList("ROLE_ADMIN"));
+        admin.setRoles(List.of("ROLE_ADMIN"));
         admin.setUsername("admin");
         admin.setEnabled(true);
 
